# computer-onboarding

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
specs/: test-coverage-analysis.md
specs/001-macos-config-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-macos-config-sync/checklists/: requirements.md
specs/001-macos-config-sync/contracts/: cli-interface.md
specs/002-auto-dotfile-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auto-dotfile-discovery/checklists/: requirements.md
specs/002-auto-dotfile-discovery/contracts/: cli-interface.md
specs/003-icloud-config-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-icloud-config-storage/checklists/: requirements.md
specs/003-icloud-config-storage/contracts/: cli-contract.md
src/macsetup/: __init__.py  __main__.py  cli.py
src/macsetup/adapters/: __init__.py  defaults.py  dotfiles.py  homebrew.py  icloud.py  mas.py
src/macsetup/models/: __init__.py  config.py  registry.py  schema.py
src/macsetup/schemas/: config.schema.json
src/macsetup/services/: __init__.py  capture.py  init.py  preview.py  setup.py  sync.py
tests/: __init__.py
tests/bats/: test_wrapper.bats
tests/contract/: __init__.py  test_config_schema.py
tests/integration/: __init__.py  test_capture.py  test_preview.py  test_setup.py  test_sync.py
tests/unit/: __init__.py  test_adapters.py  test_capture.py  test_cli.py  test_icloud.py  test_init.py  test_models.py  test_preview.py  test_registry.py  test_setup.py  test_sync.py
